# strongswan

./: configure.ac  configure.in
src/frontends/android/: .gitignore  AndroidManifest.xml  Makefile.am  project.properties
src/frontends/android/ant/: build-21.0.1.xml  genbuild.sh
src/frontends/android/jni/: .gitignore  Android.mk  Application.mk  vstr.build
src/frontends/android/jni/libandroidbridge/: Android.mk  charonservice.c  vpnservice_builder.c
src/frontends/android/jni/libandroidbridge/backend/: android_service.c  android_service.h
src/frontends/android/jni/libandroidbridge/kernel/: android_net.c
src/frontends/android/res/layout/: profile_detail_view.xml
src/frontends/android/res/values/: arrays.xml  strings.xml
src/frontends/android/res/values-ua/: strings.xml
src/frontends/android/src/org/strongswan/android/data/: VpnProfile.java  VpnProfileDataSource.java
src/frontends/android/src/org/strongswan/android/logic/: CharonVpnService.java
src/frontends/android/src/org/strongswan/android/ui/: LogActivity.java  MainActivity.java  VpnProfileDetailActivity.java
src/frontends/android/tools/: sign-release
src/libcharon/: Android.mk
src/libhydra/: Android.mk
src/libipsec/: Android.mk
src/libstrongswan/: Android.mk
